--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,6 +2,7 @@ $background-light: #1E213A;
 $background-dark: #100E1D;
 $background-grey: #6E707A;
 $text-grey: #A09FB1;
+$text-dark-grey: #88869D;
 $text-light: #E7E7EB;
 $text-dark: #110E3C;
 $box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
