--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,6 +3,7 @@ $background-dark: #100E1D;
 $background-grey: #6E707A;
 $text-grey: #A09FB1;
 $text-dark-grey: #88869D;
+$text-grey-search: #616475;
 $text-light: #E7E7EB;
 $text-dark: #110E3C;
 $box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
