--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500;600;700&display=swap');
+@import './globals.scss';
 
 body {
   padding: 0;
@@ -17,4 +18,9 @@ a {
 
 :root{
   font-size: 15px;
+}
+
+main {
+  display: flex;
+  background-color: $background-dark;
 }
