added main container

--- a/styles/Highlights.module.scss
+++ b/styles/Highlights.module.scss
@@ -2,9 +2,7 @@
 
 .highlights-container {
     padding: 0;
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-top: 2rem;
+    margin: 0;
 }
 
 .highlights-card-container {
