--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,3 +7,11 @@ $text-grey-search: #616475;
 $text-light: #E7E7EB;
 $text-dark: #110E3C;
 $box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+@mixin round-button {
+    width: 2.65rem;
+    height: 2.65rem;
+    border-radius: 100%;
+    border: 0;
+    cursor: pointer;
+}
