finished progress bar

--- a/styles/Highlights.module.scss
+++ b/styles/Highlights.module.scss
@@ -56,6 +56,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin: 0 2rem;
 }
 
 .progress-percentage {
@@ -67,7 +68,7 @@
 
 @mixin progress-bar-mixin {
     height: .5rem;
-    min-width: 15.3rem;
+    min-width: 100%;
     border-radius: 5rem;
     background-color: $text-light;
     flex-grow: 1;
@@ -77,8 +78,14 @@
     @include progress-bar-mixin();
 }
 
-.progress-bar-empty::before {
+.progress-bar-full {
     @include progress-bar-mixin();
     background-color: #FFEC65;
-    min-width: 10.3rem;
+    max-width: 50%;
+    min-width: 0;
+}
+
+.progress-percentage.align-right {
+    flex-grow: 1;
+    text-align: end;
 }
