--- a/styles/Highlights.module.scss
+++ b/styles/Highlights.module.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    row-gap: 5rem;
+    row-gap: 5vh;
     background-color: $background-dark;
 }
 
@@ -26,6 +26,9 @@
     background-color: $background-light;
     color: $text-light;
     padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .highlights-card h2 {
@@ -38,7 +41,7 @@
 }
 
 .highlights-card p {
-    margin: 0;
+    margin: 0 0 0.5rem 0;
     padding: 0;
     font-size: 4rem;
     font-weight: 700;
@@ -56,7 +59,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin: 0 2rem;
+    min-width: 70%;
 }
 
 .progress-percentage {
@@ -88,4 +91,17 @@
 .progress-percentage.align-right {
     flex-grow: 1;
     text-align: end;
+}
+
+.wind-dir-container {
+    width: 2rem;
+    height: 2rem;
+    background-color: $background-grey;
+    border-radius: 100%;
+    background-image: url("../public/images/wind.svg");
+    background-repeat: no-repeat;
+    background-size: 70%;
+    background-position: center;
+    transform: rotateZ(90deg);
+    transition: transform 350ms ease;
 }
