--- a/styles/SideBar.module.scss
+++ b/styles/SideBar.module.scss
@@ -1,7 +1,7 @@
 @import "globals.scss";
 
 .sidebar {
-    min-width: 30.6rem;
+    min-width: min(30.6rem,100vw);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -203,14 +203,16 @@
     align-items: center;
     padding-left: 0.8rem;
     margin-bottom: 1rem;
+    background: none;
+    background-image: url("../public/images/next.svg");
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: 0rem;
 }
 
 .city-item:hover {
-    border: 1px solid $text-grey-search;
-    background: none;
-    cursor: pointer;
-    background-image: url("../public/images/next.svg");
-    background-repeat: no-repeat;
     background-size: 1.5rem;
-    background-position: right;
+    border: 1px solid $text-grey-search;
+    cursor: pointer;
+    transition: all 300ms ease-in;
 }
